# db8

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.Cross  Makefile.Mac  Makefile.Mac.Release  Makefile.Ubuntu  Makefile.Ubuntu.Release  README  README.md
desktop-support/: com.palm.db.json.prv  com.palm.db.json.pub  com.palm.db.service  com.palm.tempdb.service  com.webos.mediadb.service  upstart-mediadb  upstart-mojodb  upstart-tempdb
files/conf/: maindb.conf  mediadb.conf  tempdb.conf
files/launch/: db8-maindb.conf.in  db8-maindb.in  db8-mediadb.conf.in  db8-tempdb.conf.in  db8-tempdb.in  db8.conf.in  db8.in  mediadb.conf.in  mediadb.in  mojodb.in  tempdb.conf.in  tempdb.in
files/pkgconfig/: db8.pc.in  mojodb.pc.in
files/scripts/: errorNoSpace.bash  errorOpenMainDb.bash  errorOpenMediaDb.bash  errorOpenTempDb.bash
files/sysbus/: com.palm.db.json.prv.in  com.palm.db.json.pub.in  com.palm.db.service.prv.in  com.palm.db.service.pub.in  com.palm.db8_gtest_db_media.json.prv.in  com.palm.db8_test_db_stress.json.pub.in  com.palm.db8_test_dbclient.json.pub.in  com.palm.db8_test_luna_service.json.pub.in  com.palm.mojlstest.json.pub.in  com.palm.mojlstest.service.prv.in  com.palm.tempdb.service.in  com.palm.tempdb.service.prv.in  com.webos.mediadb.service.prv.in
inc/core/: MojApp.h  MojAtomicInt.h  MojAutoPtr.h  MojBuffer.h  MojComp.h  MojCoreDefs.h  MojDataSerialization.h  MojDecimal.h  MojEpollReactor.h  MojErr.h  MojFile.h  MojGmainReactor.h  MojHashMap.h  MojHasher.h  MojJson.h  MojList.h  MojListEntry.h  MojLog.h  MojLogDb8.h  MojLogEngine.h  MojLogPmLogLib.h  MojMap.h  MojMessage.h  MojMessageDispatcher.h  MojNoCopy.h  MojNumber.h  MojObject.h  MojObjectBuilder.h  MojObjectFilter.h  MojObjectSerialization.h  MojOs.h  MojPmLogAppender.h  MojReactor.h  MojReactorApp.h  MojRefCount.h  MojSchema.h  MojService.h  MojServiceApp.h  MojServiceMessage.h  MojServiceRequest.h  (+14 more)
inc/db/: MojDb.h  MojDbClient.h  MojDbCursor.h  MojDbDefs.h  MojDbExtractor.h  MojDbIdGenerator.h  MojDbIndex.h  MojDbIsamQuery.h  MojDbKey.h  MojDbKind.h  MojDbKindEngine.h  MojDbKindIdList.h  MojDbKindState.h  MojDbMediaHandler.h  MojDbMediaLinkManager.h  MojDbObjectHeader.h  MojDbObjectItem.h  MojDbPermissionEngine.h  MojDbPutHandler.h  MojDbQuery.h  MojDbQueryFilter.h  MojDbQueryParser.h  MojDbQueryPlan.h  MojDbQuotaCheckAlert.h  MojDbQuotaEngine.h  MojDbReq.h  MojDbRevisionSet.h  MojDbSearchCache.h  MojDbSearchCursor.h  MojDbServiceClient.h  MojDbServiceDefs.h  MojDbServiceHandler.h  MojDbServiceHandlerBase.h  MojDbServiceHandlerInternal.h  MojDbShardEngine.h  MojDbShardIdCache.h  MojDbShardInfo.h  MojDbSpaceAlert.h  MojDbSpaceInformer.h  MojDbStorageEngine.h  (+5 more)
inc/db-luna/: MojDbBerkeleyEngine.h  MojDbBerkeleyFactory.h  MojDbBerkeleyQuery.h  MojDbInnoEngine.h  MojDbInnoFactory.h  MojDbInnoQuery.h  MojDbLevelEngine.h  MojDbLevelFactory.h  MojDbLevelQuery.h  MojDbLunaServiceApp.h  MojDbLunaServiceDb.h  MojDbLunaServicePdm.h  MojDbLunaServicePdmHandler.h
inc/luna/: MojFactoryReset.h  MojLunaDefs.h  MojLunaErr.h  MojLunaMessage.h  MojLunaRequest.h  MojLunaService.h
service/: com.palm.db.json.prv  com.palm.db.json.pub
src/core/: MojApp.cpp  MojBuffer.cpp  MojDataSerialization.cpp  MojDecimal.cpp  MojEpollReactor.cpp  MojErr.cpp  MojFile.cpp  MojGmainReactor.cpp  MojHashBase.cpp  MojJson.cpp  MojList.cpp  MojLog.cpp  MojLogDb8.cpp  MojLogEngine.cpp  MojMessageDispatcher.cpp  MojObject.cpp  MojObjectBuilder.cpp  MojObjectFilter.cpp  MojObjectSerialization.cpp  MojOs.cpp  MojPmLogAppender.cpp  MojRbTreeBase.cpp  MojRefCount.cpp  MojSchema.cpp  MojService.cpp  MojServiceApp.cpp  MojServiceMessage.cpp  MojServiceRequest.cpp  MojSignal.cpp  MojSock.cpp  MojSocketEncoding.cpp  MojSocketMessage.cpp  MojSocketService.cpp  MojString.cpp  MojTestRunner.cpp  MojThread.cpp  MojTokenSet.cpp  MojUtil.cpp
test/core/: CMakeLists.txt  MojAtomicIntTest.cpp  MojAtomicIntTest.h  MojAutoPtrTest.cpp  MojAutoPtrTest.h  MojBufferTest.cpp  MojBufferTest.h  MojCoreTestRunner.cpp  MojCoreTestRunner.h  MojDataSerializationTest.cpp  MojDataSerializationTest.h  MojDecimalTest.cpp  MojDecimalTest.h  MojErrTest.cpp  MojErrTest.h  MojHashMapTest.cpp  MojHashMapTest.h  MojJsonTest.cpp  MojJsonTest.h  MojListTest.cpp  MojListTest.h  MojLogTest.cpp  MojLogTest.h  MojMapTest.cpp  MojMapTest.h  MojMessageDispatcherTest.cpp  MojMessageDispatcherTest.h  MojObjectFilterTest.cpp  MojObjectFilterTest.h  MojObjectSerializationTest.cpp  MojObjectSerializationTest.h  MojObjectTest.cpp  MojObjectTest.h  MojReactorTest.cpp  MojReactorTest.h  MojRefCountTest.cpp  MojRefCountTest.h  MojSchemaTest.cpp  MojSchemaTest.h  MojSetTest.cpp  (+13 more)
test/db/: CMakeLists.txt  MojDbBulkTest.cpp  MojDbBulkTest.h  MojDbConcurrencyTest.cpp  MojDbConcurrencyTest.h  MojDbCrudTest.cpp  MojDbCrudTest.h  MojDbCursorTxnTest.cpp  MojDbCursorTxnTest.h  MojDbDistinctTest.cpp  MojDbDistinctTest.h  MojDbDumpLoadTest.cpp  MojDbDumpLoadTest.h  MojDbIndexTest.cpp  MojDbIndexTest.h  MojDbKindTest.cpp  MojDbKindTest.h  MojDbLocaleTest.cpp  MojDbLocaleTest.h  MojDbNewIdTest.cpp  MojDbNewIdTest.h  MojDbPerfCreateTest.cpp  MojDbPerfCreateTest.h  MojDbPerfDeleteTest.cpp  MojDbPerfDeleteTest.h  MojDbPerfIndexTest.cpp  MojDbPerfIndexTest.h  MojDbPerfReadTest.cpp  MojDbPerfReadTest.h  MojDbPerfTest.cpp  MojDbPerfTest.h  MojDbPerfTestRunner.cpp  MojDbPerfTestRunner.h  MojDbPerfUpdateTest.cpp  MojDbPerfUpdateTest.h  MojDbPermissionTest.cpp  MojDbPermissionTest.h  MojDbPurgeTest.cpp  MojDbPurgeTest.h  MojDbQueryFilterTest.cpp  (+33 more)
test/db-media/: CMakeLists.txt  MediaTest.cpp  Runner.cpp  Runner.h  SpamTest.cpp  SpamTest.h  utils.cpp  utils.h
test/db-scripts/: CMakeLists.txt  readme  test_quota.bash
test/dbclient/: CMakeLists.txt  MojDbClientTest.cpp  MojDbClientTest.h
test/leveldb/: CMakeLists.txt  LeveldbNoSpace.cpp  LeveldbNoSpace.h  TestContainerIterator.cpp  TestIterator.cpp  TestLdb.h  TestTxn.cpp  TestTxn.h  TestTxnIterator.cpp
test/mojocore/: AtomicIntTest.cpp  CMakeLists.txt  DecimalTest.cpp  NumberTest.cpp  Runner.cpp  Runner.h  StringTest.cpp
(+191 files in other folders)
